--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "aos": "^2.3.4",
     "axios": "^1.5.1",
     "framer-motion": "^10.16.2",
+    "lottie-web": "^5.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
@@ -17,7 +18,6 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
-    "react-scroll-parallax": "^3.4.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
